--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Error</title>
@@ -8,4 +8,4 @@
     <p>{{ error }}</p>
     <a href="/">Back to search</a>
 </body>
-</html> -->
+</html>
