--- a/templates/result.html
+++ b/templates/result.html
@@ -27,15 +27,9 @@
             text-align: left;
             border-right: 1px solid #000000;
         }
-        th {
-            background-color: #f0f0f0;
-            color: #333333;
-        }
-        tr:nth-child(even) {
-            background-color: #f9f9f9; /* Light gray for even rows */
-        }
-        tr:nth-child(odd) {
-            background-color: #ffffff; /* White for odd rows */
+        thead tr:nth-child(-n+2) th {
+            background-color: #219ebc;
+            color: #000000;
         }
         .checkbox-label {
             margin-bottom: 20px; /* Add gap between checkbox and button */
@@ -156,7 +150,7 @@
                 <button class="btn btn-green" onclick="toggleDropdown()" id="dropdownButton">
                     <i class="fa-solid fa-file-excel"></i> Download Excel
                 </button>
-                <div id="dropdownMenu" class="dropdown-menu" style="display: none; position: absolute; z-index: 1000; background-color: white; border: 1px solid #3aee03; padding: 10px;">
+                <div id="dropdownMenu" class="dropdown-menu" style="display: none; position: absolute; z-index: 1000; background-color: white; border: 1px solid #3aee03;margin-top: 10px; padding: 10px;">
                     <a class="dropdown-item" href="/download_excel?bom_name={{ request.args.get('bom_name') }}&quantity={{ request.args.get('quantity', 1) }}">
                          All Data
                     </a>
