--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
         <form action="/search" method="get">
             <div class="form-group">
                 <label for="bom_name">Enter Item :</label>
-                <input type="text" id="bom_name" name="bom_name" class="form-control" required>
+                <input type="text" id="bom_name" name="bom_name" class="form-control"  required autocomplete="off">
                 <div id="suggestions" class="list-group"></div> <!-- Suggestions div -->
             </div>
             <div class="form-group">
