--- a/templates/result.html
+++ b/templates/result.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!doctype html>
 <html lang="en">
 <head>
@@ -125,7 +124,7 @@
         <div class="d-flex justify-content-between align-items-center mb-3">
             <a href="/" class="btn btn-secondary me-3"><i class="fa-solid fa-backward"></i> Back</a>
             <div class="flex-grow-1 text-center">
-                <h1 class="mb-4 glowing-header"> Item: {{ item }} <span>( {{ qty }} )</span></h1>
+                <h1 class="mb-4 glowing-header"> BOM Name : {{ item }} <span>( {{ qty }} )</span></h1>
             </div>
         </div>  
         <div class="d-flex align-items-center mb-3" style="gap: 20px;"> <!-- Flex container with gap -->
@@ -197,5 +196,4 @@
     }
     </script>
 </html>
-=======
->>>>>>> cc26daf9e3104ada162ccecda3b9e9b0eb2b5a28
+
